实现创建local repo chart的基本功能
